@@ -1,6 +1,5 @@
 package it.gov.pagopa.pu.debtpositions.controller;
 
-import it.gov.pagopa.pu.debtpositions.model.DebtPositionTypeOrgOperators;
 import it.gov.pagopa.pu.debtpositions.service.DebtPositionTypeOrgOperatorsService;
 import org.junit.jupiter.api.AfterEach;
 import org.junit.jupiter.api.BeforeEach;
@@ -12,11 +11,10 @@ import org.mockito.junit.jupiter.MockitoExtension;
 import org.springframework.http.HttpStatus;
 import org.springframework.http.ResponseEntity;
 
-import java.util.List;
+import java.util.Collections;
 import java.util.Set;
 
-import static org.junit.jupiter.api.Assertions.assertEquals;
-import static org.junit.jupiter.api.Assertions.assertNotNull;
+import static org.junit.jupiter.api.Assertions.*;
 import static org.mockito.Mockito.when;
 
 @ExtendWith(MockitoExtension.class)
@@ -53,19 +51,18 @@ class DebtPositionTypeOrgOperatorsControllerTest {
   }
 
   @Test
-  void givenOperatorExternalUserIdAndSetOfDebtPositionTypeOrgIdsWhenSaveDebtPositionTypeOrgOperatorsForOperatorThenReturnSavedList() {
+  void givenOperatorExternalUserIdAndSetOfDebtPositionTypeOrgIdsWhenSaveDebtPositionTypeOrgOperatorsForOperatorThenReturnCreated() {
     String operatorExternalUserId = "operator1";
     Set<Long> debtPositionTypeOrgIds = Set.of(10L, 20L);
 
-    List<DebtPositionTypeOrgOperators> expectedList = List.of(new DebtPositionTypeOrgOperators(), new DebtPositionTypeOrgOperators());
+    when(debtPositionTypeOrgOperatorsServiceMock
+      .saveDebtPositionTypeOrgOperatorsForOperator(operatorExternalUserId, debtPositionTypeOrgIds))
+      .thenReturn(Collections.emptyList());
 
-    when(debtPositionTypeOrgOperatorsServiceMock.saveDebtPositionTypeOrgOperatorsForOperator(operatorExternalUserId, debtPositionTypeOrgIds))
-      .thenReturn(expectedList);
-
-    ResponseEntity<List<DebtPositionTypeOrgOperators>> result = controller.saveDebtPositionTypeOrgOperatorsForOperator(operatorExternalUserId, debtPositionTypeOrgIds);
+    ResponseEntity<Void> result = controller.saveDebtPositionTypeOrgOperatorsForOperator(operatorExternalUserId, debtPositionTypeOrgIds);
 
     assertNotNull(result);
-    assertEquals(HttpStatus.OK, result.getStatusCode());
-    assertEquals(expectedList, result.getBody());
+    assertEquals(HttpStatus.CREATED, result.getStatusCode());
+    assertNull(result.getBody());
   }
 }
